--- a/Properties/Strings.es-MX.xaml
+++ b/Properties/Strings.es-MX.xaml
@@ -1,5 +1,4 @@
-﻿
-    <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
     <!--Globals-->
@@ -33,6 +32,7 @@
     <sys:String x:Key="Glb_ZipCode">Código Postal:</sys:String>
     <sys:String x:Key="Glb_City">Ciudad:</sys:String>
     <sys:String x:Key="Glb_Description">Descripción:</sys:String>
+    <sys:String x:Key="Glb_NotAssigned">No asignado</sys:String>
     <sys:String x:Key="Glb_Active">Activos</sys:String>
     <sys:String x:Key="Glb_ViewAll">Ver Todos</sys:String>
     <sys:String x:Key="Glb_Deleted">Eliminados</sys:String>
@@ -76,7 +76,7 @@
     <sys:String x:Key="MeasureU_Pieces">Piezas</sys:String>
     <sys:String x:Key="MeasureUA_Kilograms">kg</sys:String>
     <sys:String x:Key="MeasureUA_Liters">L</sys:String>
-    <sys:String x:Key="MeasureUA_Pieces">pzas.</sys:String>
+    <sys:String x:Key="MeasureUA_Pieces">pza</sys:String>
 
     <!--EmployeeRoles-->
     <sys:String x:Key="EmployeeRole_Admin">Administrador</sys:String>
@@ -113,7 +113,7 @@
     <sys:String x:Key="RegEmployee_Header">Registrar Empleado</sys:String>
     <sys:String x:Key="RegEmployee_Desc">Ingresa los datos del empleado que se desea registrar.</sys:String>
     <sys:String x:Key="EditEmployee_Header">Editar Empleado</sys:String>
-    <sys:String x:Key="EditEmployee_Desc">Ingresa los datos del empleado que se desea registrar.</sys:String>
+    <sys:String x:Key="EditEmployee_Desc">Modifica los datos del empleado que se desea actualizar.</sys:String>
     <sys:String x:Key="RegEmployee_EmployeeInfo">Información del Empleado</sys:String>
     <sys:String x:Key="RegEmployee_PersonalInfo">Datos personales</sys:String>
     <sys:String x:Key="RegEmployee_AddressPersonal">Dirección del Empleado</sys:String>
@@ -130,7 +130,7 @@
     <sys:String x:Key="RegEmployee_DialogTSuccess">Empleado registrado</sys:String>
     <sys:String x:Key="RegEmployee_DialogDSuccess">La información del empleado ha sido registrada correctamente y los datos han sido guardados con éxito.</sys:String>
     <sys:String x:Key="RegEmployee_DialogTEditSuccess">Empleado actualizado</sys:String>
-    <sys:String x:Key="RegEmployee_DialogDEditSuccess">La información del empleado ha sido actualizada correctamente y los cambios han sido guardados con éxito."</sys:String>
+    <sys:String x:Key="RegEmployee_DialogDEditSuccess">La información del empleado ha sido actualizada correctamente y los cambios han sido guardados con éxito.</sys:String>
     <sys:String x:Key="RegEmployee_DialogTInvalidPassword">Contraseña insegura</sys:String>
     <sys:String x:Key="RegEmployee_DialogDInvalidPassword">La contraseña debe contener al menos 6 caracteres, una mayúscula, una minúscula y un número. Inténtalo nuevamente.</sys:String>
     <sys:String x:Key="RegEmployee_DialogTRfcDuplicate">RFC duplicado</sys:String>
@@ -153,10 +153,21 @@
     <sys:String x:Key="Supplies_TableHMeasureUnit">Unidad de Medida</sys:String>
     <sys:String x:Key="Supplies_BtnDeleteSupply">Eliminar Insumo</sys:String>
     <sys:String x:Key="Supplies_BtnEditSupply">Editar Insumo</sys:String>
+    <sys:String x:Key="Supplies_BtnReactivateSupply">Reactivar Insumo</sys:String>
+    <sys:String x:Key="Supplies_DialogTDeleteSupply">¿Eliminar insumo?</sys:String>
+    <sys:String x:Key="Supplies_DialogDDeleteSupply">¿Estás seguro de que deseas eliminar el insumo seleccionado? La eliminación es reversible y podrás restaurarlo más tarde si lo necesitas.</sys:String>
+    <sys:String x:Key="Supplies_DialogTDeletedSupply">Insumo eliminado</sys:String>
+    <sys:String x:Key="Supplies_DialogDDeletedSupply">El insumo fue marcado como eliminado correctamente. Puedes restaurarlo desde la vista de insumos eliminados.</sys:String>
+    <sys:String x:Key="Supplies_DialogTReactivateSupply">¿Reactivar insumo?</sys:String>
+    <sys:String x:Key="Supplies_DialogDReactivateSupply">¿Estás seguro de que deseas reactivar el insumo seleccionado? Podrá ser asociado a proveedores y recetas nuevamente.</sys:String>
+    <sys:String x:Key="Supplies_DialogTReactivatedSupply">Insumo reactivado</sys:String>
+    <sys:String x:Key="Supplies_DialogDReactivatedSupply">El insumo fue reactivao correctamente. Ahora aparecerá nuevamente en la lista de insumos e inventarios.</sys:String>
 
     <!--Register Supply-->
     <sys:String x:Key="RegSupply_Header">Registrar Insumo</sys:String>
     <sys:String x:Key="RegSupply_Desc">Ingresa los datos del insumo que se desea registrar.</sys:String>
+    <sys:String x:Key="EditSupply_Header">Editar Insumo</sys:String>
+    <sys:String x:Key="EditSupply_Desc">Modifica los datos del insumo que se desea actualizar.</sys:String>
     <sys:String x:Key="RegSupply_SupplyInfo">Información del Insumo</sys:String>
     <sys:String x:Key="RegSupply_TbSupplyName">Nombre del insumo:</sys:String>
     <sys:String x:Key="RegSupply_TbSupplyBrand">Marca del insumo:</sys:String>
@@ -165,10 +176,12 @@
     <sys:String x:Key="RegSupply_CbCategory">Categoría:</sys:String>
     <sys:String x:Key="RegSupply_CbSupplier">Proveedor del insumo:</sys:String>
     <sys:String x:Key="RegSupply_CbSupplyMeasure">Unidad de medida:</sys:String>
-    <sys:String x:Key="RegSupply_BtnRegisterSupplier">Registrar Proveedor</sys:String>
     <sys:String x:Key="RegSupply_BtnRegisterSupply">Registrar Insumo</sys:String>
+    <sys:String x:Key="RegSupply_BtnEditSupply">Actualizar Insumo</sys:String>
     <sys:String x:Key="RegSupply_DialogTSuccess">Insumo registrado</sys:String>
     <sys:String x:Key="RegSupply_DialogDSuccess">La información del insumo ha sido registrada correctamente y los datos han sido guardados con éxito.</sys:String>
+    <sys:String x:Key="RegSupply_DialogTEditSuccess">Insumo actualizado</sys:String>
+    <sys:String x:Key="RegSupply_DialogDEditSuccess">La información del insumo ha sido actualizada correctamente y los cambios han sido guardados con éxito.</sys:String>
     <sys:String x:Key="RegSupply_DialogSelectSupplyImage">Seleccionar imagen del insumo...</sys:String>
 
     <!--Customers-->
